Iter1 2/create and access private game/nip (#3)
* start work on private game creation

* swap order in form

* fix web steps and make migration for is_private and private_id

* create private games and fix features

* Failing 27 tests. Pushing to give Ollie access to this branches work

* 4 failing

* 4 failing

* two failing 1 pending

* all tests passing!

* Private Games accessable and creatable

* migrate production database

--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -22,6 +22,7 @@
                             <thead>
                                 <tr>
                                     <th style="text-align: left">Games</th>
+                                    <th>Privacy</th>
                                     <th>Edit Game</th>
                                     <th>See Results</th>
                                 </tr>
@@ -30,12 +31,17 @@
                                  <% @games.each do |game| %>
                                      <tr>
                                         <td><%= game.title%></a></td>
+                                        <% if game.is_private %>
+                                          <td>Private</td>
+                                        <% else %>
+                                          <td>Public</td>
+                                        <% end %>
                                         <% if !game.expired %>
-                                            <td><a href=<%= edit_game_path(current_user.id, game.id)%>><button type="button" class="btn btn-default btn-circle"><i class="fa fa-pencil-square-o"></i></button></a></td>
+                                            <td><a href=<%= edit_game_path(current_user.id, game.resource_id)%>><button type="button" class="btn btn-default btn-circle"><i class="fa fa-pencil-square-o"></i></button></a></td>
                                         <%else %>
                                             <td></td>
                                         <%end%>
-                                        <td><a href=<%= results_path(:id => game.id)%>><button type="button" class="btn btn-default btn-circle"><i class="fa fa-bar-chart"></i></button></a></td>
+                                        <td><a href=<%= results_path(:resource_id => game.resource_id)%>><button type="button" class="btn btn-default btn-circle"><i class="fa fa-bar-chart"></i></button></a></td>
                                      </tr>
                                 <% end %>
                             </tbody>
